--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body {
   color: #666;
 }
 
+.container {
+  display: flex;
+}
+
 .grid {
   width: 200px;
   height: 400px;
@@ -30,4 +34,18 @@ body {
 
 .tetromino {
   background-color: blue;
+}
+
+.mini-grid {
+  margin-left: 50px;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #bac1e1;
+}
+
+.mini-grid > * {
+  height: 20px;
+  width: 20px;
 }
